--- a/window.html
+++ b/window.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style/window.css">
     <title>appName</title>
 </head>
 <body id="WindowView">
-    <webview class="background webview" id="container" src="about:blank" partition="persist:framelessapps" frameborder="0">
-        
+    <webview class="webview" id="container" src="about:blank" partition="persist:framelessapps" frameborder="0">
+
     </webview>
   
 <script defer src="window.js"></script>
