list addfunction 추가

--- a/setting.html
+++ b/setting.html
@@ -2,10 +2,11 @@
 <head>
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
     <style>
-        BODY {width: 520px; min-height: 250px;}
+        /* BODY {width: 520px; min-height: 250px;} */
     </style>
     
-    <script src="load.js"></script>
+    <script src="setting.js"></script>
+
 </head>
 <body>
 
