background event 추가

--- a/setting.html
+++ b/setting.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="style/setting.css">
+    <link rel="stylesheet" href="style/toolbar.css">
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
     <style>
         /* BODY {width: 520px; min-height: 250px;} */
@@ -9,6 +11,13 @@
 
 </head>
 <body>
-
+        <div id="window_toolbar">
+                <button id="fix_window_btn">
+                    고정
+                </button>
+                <button id="close_window_btn" title="Close">
+                    닫기
+                </button>
+            </div>
 </body>
 </html>
