--- a/window.html
+++ b/window.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="style/window.css">
     <link rel="stylesheet" href="style/toolbar.css">
+    <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
     <title>appName</title>
     <script defer src="window.js"></script>
  
@@ -13,8 +14,6 @@
     </webview>
 
     <div id="window_toolbar">
-
-        
         <button id="fix_window_btn">
             고정
         </button>
