--- a/setting.html
+++ b/setting.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
+<html>
+    
 <head>
+        <script src="setting.js"></script>
     <link rel="stylesheet" href="style/setting.css">
     <link rel="stylesheet" href="style/toolbar.css">
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
-    <style>
-        /* BODY {width: 520px; min-height: 250px;} */
-    </style>
-    
-    <script src="setting.js"></script>
-
+    <title>appName</title>
 </head>
-<body>
+<body id="WindowView">
+    <div>
+        <a>주소 : </a><input placeholder="주소를 입력해주세요"/>
+        <button id="save_window_btn">저장</button>
+        <ul id="visitlist_ul">
+
+        </ul>
+    </div>
         <div id="window_toolbar">
                 <button id="fix_window_btn">
                     고정
                 </button>
-                <button id="close_window_btn" title="Close">
-                    닫기
+                <button id="close_window_btn">
+                        닫기
                 </button>
             </div>
 </body>
