--- a/setting.html
+++ b/setting.html
@@ -10,7 +10,7 @@
 </head>
 <body id="WindowView">
     <div>
-        <a>주소 : </a><input placeholder="주소를 입력해주세요"/>
+        <a>주소 : </a><input id="input_area" placeholder="주소를 입력해주세요"/>
         <button id="save_window_btn">저장</button>
         <ul id="visitlist_ul">
 
