--- a/window.html
+++ b/window.html
@@ -14,15 +14,21 @@
     </webview>
 
     <div id="window_toolbar">
-        <button id="fix_window_btn">
-            고정
-        </button>
-        <button id="setting_window_btn">    
-            세팅
-        </button>
-        <button id="close_window_btn">
-            닫기
-        </button>
+        <webview id="window_favicon">
+
+        </webview>
+        <span id="window_title">Test</span>
+        <div id="window_buttonlst">
+                <button id="fix_window_btn">
+                        고정
+                    </button>
+                    <button id="setting_window_btn">    
+                        세팅
+                    </button>
+                    <button id="close_window_btn">
+                        닫기
+                    </button>
+        </div>
     </div>
 </body>
 </html>
