mouse move event update

--- a/window.html
+++ b/window.html
@@ -10,10 +10,10 @@
  
 </head>
 <body id="WindowView">
-    <webview class="webview" id="container" src="about:blank" partition="persist:framelessapps" frameborder="0">
+    <webview class="container_moveup" id="container" src="about:blank" partition="persist:framelessapps" frameborder="0">
     </webview>
 
-    <div id="window_toolbar">
+    <div id="window_toolbar" class="window_toolbar_moveup">
         <webview id="window_favicon">
 
         </webview>
