iframe fullscreen event add && setting toolbar fix

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -4,18 +4,19 @@
         <script src="../js/setting.js"></script>
     <link rel="stylesheet" href="../../style/setting.css">
     <link rel="stylesheet" href="../../style/toolbar.css">
+
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
     <title>appName</title>
 </head>
 <body id="WindowView">
-    <div>
+    <div id="setting_container" class="container_movedown">
         <a>주소 : </a><input id="input_area" placeholder="주소를 입력해주세요"/>
         <button id="save_window_btn">저장</button>
         <ul id="visitlist_ul">
 
         </ul>
     </div>
-        <div id="window_toolbar">
+        <div id="window_toolbar" class="window_toolbar_movedown">
                 <button id="fix_window_btn">
                     고정
                 </button>
