dynamic title setting

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -17,12 +17,15 @@
         </ul>
     </div>
         <div id="window_toolbar" class="window_toolbar_movedown">
+            <span id="window_title">Multi View</span>
+            <div id="window_buttonlst">
                 <button id="fix_window_btn">
                     고정
                 </button>
                 <button id="close_window_btn">
                         닫기
                 </button>
+            </div>
             </div>
 </body>
 </html>
