--- a/src/html/window.html
+++ b/src/html/window.html
@@ -14,10 +14,10 @@
     </webview>
 
     <div id="window_toolbar" class="window_toolbar_moveup">
+        <span id="window_title">Multi View</span>
         <webview id="window_favicon">
 
         </webview>
-        <span id="window_title">Test</span>
         <div id="window_buttonlst">
                 <button id="fix_window_btn">
                         고정
