list favicon && event edit

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -10,10 +10,11 @@
 </head>
 <body id="WindowView">
     <div id="setting_container" class="container_movedown">
-        <a>주소 : </a><input id="input_area" placeholder="주소를 입력해주세요"/>
-        <button id="save_window_btn">저장</button>
+        <p>Address</p>
+        <input id="input_area" placeholder="주소를 입력해주세요"/>
+        <button id="save_window_btn">Save</button>
+        <p>List</p>
         <ul id="visitlist_ul">
-
         </ul>
     </div>
         <div id="window_toolbar" class="window_toolbar_movedown">
