listview dynamic favicon load

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -27,6 +27,8 @@
                         닫기
                 </button>
             </div>
+            <div id ="window_dragarea"></div>
             </div>
+            <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
 </body>
 </html>
