--- a/src/html/window.html
+++ b/src/html/window.html
@@ -28,6 +28,7 @@
                         닫기
                     </button>
         </div>
+        <div id ="window_dragarea"></div>
     </div>
 </body>
 </html>
