toolbararea add sliderbar

--- a/src/html/window.html
+++ b/src/html/window.html
@@ -17,6 +17,9 @@
         <webview id="window_favicon"></webview>
         <span id="window_title">Multi View</span>
         <div id="window_buttonlst">
+            <input type="button" id="size_window_button"/>
+            <input type="range" min="0" max="200"
+            value="20" id="size_window_slider"/>
                 <button id="fix_window_btn">
                         고정
                     </button>
