--- a/src/html/window.html
+++ b/src/html/window.html
@@ -18,8 +18,9 @@
         <span id="window_title">Multi View</span>
         <div id="window_buttonlst">
             <input type="button" id="size_window_button"/>
-            <input type="range" min="0" max="200"
-            value="20" id="size_window_slider"/>
+            <input type="range" class="size_window_range" min="0" max="100"
+            value="100" id="size_window_slider"/>
+            <span width="20px"></span>
                 <button id="fix_window_btn">
                         고정
                     </button>
