toolbar move position event add

--- a/src/html/window.html
+++ b/src/html/window.html
@@ -12,7 +12,6 @@
 <body id="WindowView">
     <webview class="container_moveup" id="window_container" src="about:blank" partition="persist:framelessapps" frameborder="0">
     </webview>
-
     <div id="window_toolbar" class="window_toolbar_moveup">
         <webview id="window_favicon"></webview>
         <span id="window_title">Multi View</span>
@@ -22,14 +21,13 @@
             value="100" id="size_window_slider"/>
             <span width="20px"></span>
                 <button id="fix_window_btn">
-                        고정
+                        fixing
                     </button>
                     <button id="setting_window_btn">    
-                        세팅
+                        setting
                     </button>
-                    
                     <button id="close_window_btn">
-                        닫기
+                        close
                     </button>
         </div>
         <div id ="window_dragarea"></div>
