--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -13,18 +13,18 @@
         <p>Address</p>
         <input id="input_area" placeholder="주소를 입력해주세요"/>
         <button id="save_window_btn">Save</button>
-        <p>List</p>
+        <p>Recent Visit List</p>
         <ul id="visitlist_ul">
         </ul>
     </div>
         <div id="window_toolbar" class="window_toolbar_movedown">
             <span id="window_title">Multi View</span>
             <div id="window_buttonlst">
-                <button id="fix_window_btn">
-                    고정
+                <button class="window_btn" id="fix_window_btn">
                 </button>
-                <button id="close_window_btn">
-                        닫기
+                <button class="window_btn" id="underbar_window_btn">
+                </button>
+                <button class="window_btn" id="close_window_btn">
                 </button>
             </div>
             <div id ="window_dragarea"></div>
