autocomplete event add

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval' data:;" />
+
  <title>appName</title>s
    <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
    <script src="../../thirdparty/jquery-ui.min.js"></script>
     <script src="../js/setting.js"></script>
     <link rel="stylesheet" href="../../style/setting.css">
     <link rel="stylesheet" href="../../style/toolbar.css">
-
-    <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval';" />
 </head>
 <body id="WindowView">
     <div id="setting_container" class="container_movedown">
@@ -35,6 +36,5 @@
             </div>
             <div id ="window_dragarea"></div>
             </div>
-            <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
 </body>
 </html>
