--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -9,6 +9,7 @@
    <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
    <script src="../../thirdparty/jquery-ui.min.js"></script>
     <script src="../js/setting.js"></script>
+    <link rel="stylesheet" href="../../style/jquery-ui.min.css">
     <link rel="stylesheet" href="../../style/setting.css">
     <link rel="stylesheet" href="../../style/toolbar.css">
 </head>
@@ -16,10 +17,13 @@
     <div id="setting_container" class="container_movedown">
         <p>Address</p>
         <input id="input_area" placeholder="주소를 입력해주세요"/>
-        <button id="save_window_btn">Save</button>
+        <button id="save_window_btn">Search</button>
         <p>Recent Visit List</p>
-        <ul id="visitlist_ul">
-        </ul>
+        <div id="visitlist_ul_cover">
+            <ul id="visitlist_ul">
+            </ul>
+        </div>
+ 
     </div>
         <div id="window_toolbar" class="window_toolbar_movedown">
             <link rel="icon" type="image/pn" href="../../image/multiview_16.png">
