csp error Keep fixing.....

--- a/src/html/window.html
+++ b/src/html/window.html
@@ -5,13 +5,12 @@
     <link rel="stylesheet" href="../../style/window.css">
     <link rel="stylesheet" href="../../style/toolbar.css">
     <meta http-equiv="Content-Security-Policy"charset="UTF-8"; content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-    <!-- <meta http-equiv="context-type" content="text/html"; charset="UTF-8"> -->
     <title>appName</title>
     <script defer src="/src/js/window.js"></script>
  
 </head>
 <body id="WindowView">
-    <webview class="container_moveup" id="window_container" src="about:blank" partition="persist:framelessapps" frameborder="0">
+    <webview class="container_moveup" id="window_container"  partition="persist:framelessapps" frameborder="0">
     </webview>
     <div id="window_toolbar" class="window_toolbar_moveup">
         <webview id="window_favicon"></webview>
