--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval' data:;" />
 
- <title>appName</title>s
+ <title>appName</title>
    <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
    <script src="../../thirdparty/jquery-ui.min.js"></script>
     <script src="../js/setting.js"></script>
@@ -31,8 +31,7 @@
                 Multi View
             </span>
             <div id="window_buttonlst">
-                <button class="window_btn" id="fix_window_btn">
-                </button>
+            
                 <button class="window_btn" id="underbar_window_btn">
                 </button>
                 <button class="window_btn" id="close_window_btn">
