toolbar not working error update

--- a/src/html/window.html
+++ b/src/html/window.html
@@ -12,7 +12,7 @@
 <body id="WindowView">
     <webview class="container_moveup" id="window_container"  partition="persist:framelessapps" frameborder="0">
     </webview>
-    <div id="window_toolbar" class="window_toolbar_moveup">
+    <div id="window_toolbar" class="detect window_toolbar_moveup">
         <webview id="window_favicon"></webview>
         <span id="window_title">Multi View</span>
         <div id="window_buttonlst">
