--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -25,7 +25,7 @@
         </div>
  
     </div>
-        <div id="window_toolbar" class="window_toolbar_movedown">
+        <div id="window_toolbar" class="position window_toolbar_movedown">
             <link rel="icon" type="image/pn" href="../../image/multiview_16.png">
             <span id="window_title">
                 Multi View
