favicon load async load update...

--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval' data:;" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval' 'wasm-eval' data:;" />
 
  <title>appName</title>
    <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
@@ -27,6 +27,7 @@
     </div>
         <div id="window_toolbar" class="position window_toolbar_movedown">
             <link rel="icon" type="image/pn" href="../../image/multiview_16.png">
+            <webview id="window_favicon"></webview>
             <span id="window_title">
                 Multi View
             </span>
