--- a/src/html/window.html
+++ b/src/html/window.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="../../style/window.css">
     <link rel="stylesheet" href="../../style/toolbar.css">
-    <meta http-equiv="Content-Security-Policy"charset="UTF-8"; content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy"charset="UTF-8"; content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-eval'">
     <title>appName</title>
     <script defer src="/src/js/window.js"></script>
  
