--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-    <meta http-equiv="context-type" content="text/html"; charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://suggestqueries.google.com 'unsafe-inline' 'unsafe-eval' 'wasm-eval' data:;" />
-
- <title>appName</title>
-   <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
-   <script src="../../thirdparty/jquery-ui.min.js"></script>
-    <script src="../js/setting.js"></script>
-    <link rel="stylesheet" href="../../style/jquery-ui.min.css">
-    <link rel="stylesheet" href="../../style/setting.css">
-    <link rel="stylesheet" href="../../style/toolbar.css">
-</head>
-<body id="WindowView">
-    <div id="setting_container" class="container_movedown">
-        <p>Address</p>
-        <input id="input_area" placeholder="주소를 입력해주세요"/>
-        <button id="save_window_btn">Search</button>
-        <p>Recent Visit List</p>
-        <div id="visitlist_ul_cover">
-            <ul id="visitlist_ul">
-            </ul>
+    <head>
+        <meta http-equiv="context-type" content="text/html" ;=";" charset="UTF-8">
+        <title>appName</title>
+        <script src="../../thirdparty/jquery-3.5.1.min.js"></script>
+        <script src="../../thirdparty/jquery-ui.js"></script>
+        <script src="../js/setting.js"></script>
+        <link rel="stylesheet" href="../../style/jquery-ui.min.css">
+        <link rel="stylesheet" href="../../style/setting.css">
+        <link rel="stylesheet" href="../../style/toolbar.css">
+    </head>
+    <body id="WindowView">
+        <div id="setting_container" class="container_movedown">
+            <p>Address</p>
+            <input id="input_area" placeholder="Please enter your address."/>
+            <button id="save_window_btn">Search</button>
+            <p>Recent Visit List</p>
+            <div id="visitlist_ul_cover">
+                <ul id="visitlist_ul"></ul>
+            </div>
         </div>
- 
-    </div>
         <div id="window_toolbar" class="position window_toolbar_movedown">
-            <link rel="icon" type="image/pn" href="../../image/multiview_16.png">
             <webview id="window_favicon"></webview>
             <span id="window_title">
                 Multi View
             </span>
             <div id="window_buttonlst">
-            
-                <button class="window_btn" id="underbar_window_btn">
-                </button>
-                <button class="window_btn" id="close_window_btn">
-                </button>
+                <button class="window_btn" id="underbar_window_btn"></button>
+                <button class="window_btn" id="close_window_btn"></button>
             </div>
-            <div id ="window_dragarea"></div>
-            </div>
-</body>
+            <div id="window_dragarea"></div>
+        </div>
+    </body>
 </html>
