--- a/src/html/setting.html
+++ b/src/html/setting.html
@@ -12,10 +12,10 @@
     </head>
     <body id="WindowView">
         <div id="setting_container" class="container_movedown">
-            <p>Address</p>
-            <input id="input_area" placeholder="Please enter your address."/>
-            <button id="save_window_btn">Search</button>
-            <p>Recent Visit List</p>
+            <p id="appTxtlAdrressBox">Address</p>
+            <input id="appPlaceHolderSearch" placeholder="Please enter your address."/>
+            <button id="appBtnSearch">Search</button>
+            <p id="appLabelRecnetVisitPage">Recent Visit List</p>
             <div id="visitlist_ul_cover">
                 <ul id="visitlist_ul"></ul>
             </div>
@@ -26,8 +26,8 @@
                 Multi View
             </span>
             <div id="window_buttonlst">
-                <button class="window_btn" id="underbar_window_btn"></button>
-                <button class="window_btn" id="close_window_btn"></button>
+                <button class="window_btn" id="appLabelMinimize"></button>
+                <button class="window_btn" id="appLabelClose"></button>
             </div>
             <div id="window_dragarea"></div>
         </div>
