--- a/src/html/window.html
+++ b/src/html/window.html
@@ -21,7 +21,7 @@
             <webview id="window_favicon"></webview>
             <span id="window_title">Multi View</span>
             <div id="window_buttonlst">
-                <input type="button" id="size_window_button"/>
+                <input type="button" id="appLabelZoom"/>
                 <input
                     type="range"
                     class="size_window_range"
@@ -30,10 +30,10 @@
                     value="100"
                     id="size_window_slider"/>
                 <span width="20px"></span>
-                <button class="window_btn fixoff_window" id="fix_window_btn"></button>
-                <button class="window_btn" id="setting_window_btn"></button>
-                <button class="window_btn" id="underbar_window_btn"></button>
-                <button class="window_btn" id="close_window_btn"></button>
+                <button class="window_btn fixoff_window" id="appLabelFix"></button>
+                <button class="window_btn" id="appLabelSetting"></button>
+                <button class="window_btn" id="appLabelMinimize"></button>
+                <button class="window_btn" id="appLabelClose"></button>
             </div>
             <div id="window_dragarea"></div>
         </div>
